--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -174,3 +174,29 @@ zope.testbrowser = 4.0.2
 zope.testing = 4.0.0
 zope.traversing = 3.13.2
 zope.viewlet = 3.7.2
+
+# added on 18-01-2012
+buildout-script = 0.2a1
+ore.recipe.fs = 0.3.1
+Paste = 1.7.5.1
+pyprof2calltree = 1.1.0
+roman = 1.4.0
+six = 1.1.0
+WebTest = 1.3.3
+z3c.recipe.scripts = 1.0.1
+zope.app.form = 4.0.2
+zope.applicationcontrol = 3.5.5
+zope.broken = 3.5.0
+zope.browserpage = 3.12.2
+zope.browserresource = 3.12.0
+zope.generations = 3.7.1
+zope.login = 1.0.0
+zope.pluggableauth = 1.3
+zope.preference = 3.8.0
+zope.principalannotation = 3.6.1
+zope.processlifetime = 1.0
+zope.ptresource = 3.9.0
+zope.ramcache = 1.0
+zope.testrunner = 4.0.4
+appy = 0.7.0
+
