--- a/bungeni.buildout/trunk/versions.cfg
+++ b/bungeni.buildout/trunk/versions.cfg
@@ -69,7 +69,6 @@ zc.lockfile = 1.0.0
 ZConfig = 2.9.0
 zc.recipe.cmmi = 1.3.5
 zc.recipe.egg = 1.3.2
-zc.recipe.testrunner = 1.4.0
 zc.resourcelibrary = 1.3.2
 zc.table = 0.8.1
 zdaemon = 2.0.4
@@ -171,10 +170,13 @@ zope.structuredtext = 3.5.1
 zope.tal = 3.6.0
 zope.tales = 3.5.1
 zope.testbrowser = 4.0.2
-zope.testing = 4.0.0
 zope.traversing = 3.13.2
 zope.viewlet = 3.7.2
-
+# !+BUILDOUT(miano, 31/01/2012)
+# This two packages need to be upgraded.
+# bungeni.ui downloaddocument.txt breaks when the latest packages are used.
+zc.recipe.testrunner = 1.2.0
+zope.testing = 3.8.1
 # added on 18-01-2012
 buildout-script = 0.2a1
 ore.recipe.fs = 0.3.1
@@ -199,4 +201,3 @@ zope.ptresource = 3.9.0
 zope.ramcache = 1.0
 zope.testrunner = 4.0.4
 appy = 0.7.0
-
