--- a/bungeni.buildout/trunk/platform.cfg
+++ b/bungeni.buildout/trunk/platform.cfg
@@ -21,6 +21,7 @@ platform_parts =
 ;;      exist
 ;;      exist-setup
 ;;      exist-ctl
+      rabbitmq
 
 [postgresql]
 recipe = zc.recipe.cmmi
@@ -240,3 +241,9 @@ path = ${buildout:bin-directory}/admin-passwd
 content =
  #!/bin/sh
   ${buildout:bin-directory}/python ${buildout:directory}/data/scripts/admin-password.py
+  
+[rabbitmq]
+recipe = hexagonit.recipe.download
+url = http://www.rabbitmq.com/releases/rabbitmq-server/v2.7.1/rabbitmq-server-generic-unix-2.7.1.tar.gz
+strip-top-level-dir = true  
+
